# go-guitar

./: .gitmodules  README.md
DLC/: README.md
godot-game/: project.godot
godot-game/scenes/: main.tscn
godot-game/scripts/: chord_manager.gd  common.gd  game_controller.gd  go_guitar_api.gd  highway.gd  main.gd  note_manager.gd  ui.gd  ui_controller.gd
rust-backend/: Cargo.toml  build.rs  gdextension.json
rust-backend/src/: arrangement.rs  audio.rs  lib.rs  psarc.rs  wem.rs
